2008-10-31  Chris Morley

	* src/formats/getinchi.cpp: prevent failure when input contains
	"InChI>InChI=...", which actually occurred in an SDF file.

2008-10-27  Chris Morley

	* mcdlutil.cpp: Replace all calls to fabs with abs. 
	Remove internal templates and template molecule sorting; all
	template molecules are now in templates.sdf which has to be sorted,
	largest first.
	
	* data/templates.sdf: 147 molecules, sorted
	
	* obconversion.cpp(Convert): make OutputAtEnd option work with
	multiple input files.

2008-10-23  Tim Vandermeersch <tim.vandermeersch@gmail.com>

	* src/chains.cpp: Remove debug output.

	* src/forcefields/forcefielduff.cpp: Check if parameters are found and
	don't try to use a NULL pointer when there isn't a parameter. (Fixes:
	#2187870)

2008-10-22  Tim Vandermeersch <tim.vandermeersch@gmail.com>

	* src/forcefields/forcefield*.h: Fix MakeNewInstance().

2008-10-20  Tim Vandermeersch <tim.vandermeersch@gmail.com>

	* src/CMakeLists.txt: Add gen2D.cpp and mcdlutil.cpp
	
	* src/mcdlutil.cpp: Replace all calls to abs(double) with fabs(double)

	* src/formats/MCDLformat.cpp: Replace string.npos with string::npos

2008-10-20  Chris Morley
	
	* include/openbabel/mcdlutil.h, src/mcdlutil.cpp: New files
	which use MCDL library to generate 2D coordinates
	
	* src/formats/MCDLformat.cpp: some code moved to the above files.
	
	* src/ops/gen2D.cpp: wrapper op for --gen2d 
	
	* data/templates.sdf: New file with example template
	
	* src/transform.cpp: help on --sort and --revsort

2008-10-20  Chris Morley
	 
	* include/openbabel/obmolecformat.h, src/obmolecformat.cpp:
	New functions to sort molecules, Sort(), OutputSortedMols()
	and LessThan()
	
	* include/openbabel/descriptor.h, src/descriptor.cpp: New
	virtual function LessThan() and default implementation.
	Make several error messages once only.
	
	* src/descriptors/filters.cpp: Add LessThan functions for TitleFilter
	and more complex one + GetCachedValue() + Init() for InChIFilter.
	 